--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,32 @@
-# Node
-node_modules/
-dist/
-.vite/
-
-# Environment
-.env
-.env.local
-
-# OS
-.DS_Store
 
 # Logs
 npm-debug.log*
 yarn-debug.log*
 pnpm-debug.log*
 
-# Python backend (if same repo)
-venv/
+# environments
 .venv/
-__pycache__/
-*.db
-watcher.log
+venv/
 
+# python cache
+__pycache__/
+
+# node
+node_modules/
+dist/
+
+# tauri
+src-tauri/target/
+
+# databases & embeddings
 db/
+*.db
 *.npy
 
-src-tauri/target/
+# OS junk
+.DS_Store
+
+# large media
+*.mov
+*.mp4
+
